--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
@@ -16,22 +17,43 @@
             <a href="/" class="navbar-brand">CRUB JAVASCRIPT</a>
         </div>
     </nav>
-
+    <div class="container container-form-edit my-3">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card card-body">
+                    <form class="form-edit">
+                        <div class="form-group">
+                            <input type="text" class="form-control title-edit" name="title"
+                            placeholder="Task Title"
+                            autofocus>
+                        </div>
+                        <div class="form-group">
+                        <textarea 
+                        name="description"  rows="2" class="form-control description-edit"
+                        placeholder="Task Description"></textarea>
+                        </div>
+                        <input type="submit" class="btn btn-success btn-block" value="Actualizar">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container p-4">
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-body">
-                    <form action="" method="POST">
+                    <form class="form-data-task">
                         <div class="form-group">
                             <input type="text" class="form-control" name="title"
                             placeholder="Task Title"
                             autofocus>
                         </div>
                         <div class="form-group">
-                        <textarea name="description"  rows="2" class="form-control"
+                        <textarea 
+                        name="description"  rows="2" class="form-control"
                         placeholder="Task Description"></textarea>
                         </div>
-                        <input type="submit" class="btn btn-success btn-block">
+                        <input type="submit" class="btn btn-primary btn-block" value="crear">
                     </form>
     
                 </div>
@@ -42,31 +64,17 @@
                         <tr>
                             <th>Title</th>
                             <th>Description</th>
-                            <th>Created At</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                                <tr>
-                                    <td>title</td>
-                                    <td>description</td>
-                                    <td>Created at/td>
-                                    <td>
-                                        <a 
-                                        class="btn btn-secondary " href="">
-                                            <i class="fas fa-marker"></i>
-                                        </a>
-                                        <a 
-                                        class="btn btn-danger " href="">
-                                            <i class="far fa-trash-alt"></i>
-                                        </a>
-                                    </td>
-                                </tr>          
+                    <tbody class="all-tasks-container">
+                                     
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
+
 <script src="main.js"></script>
 </body>
 </html>
